[package]
name = "rustubble"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
crossterm = "0.27"             # or another version, check crates.io for the latest
lazy_static = "1.4.0"
maplit = { version = "1.0.2" }
